test/Fail/Issue1614a.err
Issue1614a.agda:5.1-28: error: [SafeFlagNoPositivityCheck]
Cannot use NO_POSITIVITY_CHECK pragma with safe flag.
